# arion

./: .gitignore  .travis.yml  CLAUDE.md  LICENSE  README.md  arion.cabal
src/: Main.hs
src/Arion/: EventProcessor.hs  FileUtils.hs  Help.hs  Runner.hs  Types.hs  Utilities.hs
test/Arion/: EventProcessorSpec.hs  HelpSpec.hs  RunnerSpec.hs  TypesSpec.hs  UtilitiesSpec.hs
